<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="0.1dp"
    tools:style="@style/CardView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:transitionName="@string/detail_video_poster_transition" />

            <ProgressBar
                android:id="@+id/loading_image_progress"
                android:layout_width="@dimen/poster_progressbar_size"
                android:layout_height="@dimen/poster_progressbar_size"
                android:layout_gravity="center"
                android:indeterminateDrawable="@drawable/custom_progress"
                android:visibility="gone"
                android:theme="@style/CircularProgress" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="6dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="6dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/arima_madurai_bold"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                android:transitionName="@string/detail_video_title_transition"
                tools:text="Tao đợi mẹ." />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:textSize="14sp"
                android:transitionName="@string/detail_video_content_transition"
                tools:text="Tao đợi mẹ" />

            <TextView
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="2"
                android:textSize="14sp"
                android:transitionName="@string/detail_video_content_transition"
                tools:text="340 lượt xem" />

            <TextView
                android:id="@+id/recommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:textSize="14sp"
                android:visibility="gone"
                android:text="Recommended for you"/>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>